[package]
name = "spendguard-envoy-extproc"
version = "0.1.0-alpha"
edition = "2021"
license = "Apache-2.0"
description = "SpendGuard Envoy AI Gateway ExtProc sidecar (D01). Translates Envoy ExternalProcessor gRPC calls into SpendGuard sidecar UDS adapter calls. SLICE 1 skeleton: Handshake-only — bin + lib, vendored ext_proc.v3 proto, sidecar UDS handshake mirroring services/egress_proxy. See docs/specs/coverage/D01_envoy_extproc/."

[[bin]]
name = "spendguard-envoy-extproc"
path = "src/main.rs"

[lib]
name = "spendguard_envoy_extproc"
path = "src/lib.rs"

[features]
# SLICE 6 — UDS transport is the SLICE 1-5 carve-out per design §3.3;
# production builds compile with `--no-default-features` so the
# `UnixListener` / `UnixStream` code paths drop out entirely (the §7.1
# production grep gate sees only `#[cfg(...)]`-gated lines). Tests and
# local-dev builds keep `uds-dev` on so the SLICE 1-5 mock sidecar
# handshake fixture and the docker-compose demo continue to work
# without an mTLS cert authority. Production Helm wiring uses
# `Transport::Tcp` exclusively and `--no-default-features` is set in
# the chart-published image build.
default = ["uds-dev"]
uds-dev = []

[dependencies]
time = { version = "=0.3.49", default-features = false }  # pin: 0.3.50 is broken (references time_macros::timestamp absent in its paired time-macros 0.2.29); float again once a fixed 0.3.51+ ships
# gRPC + protobuf. tonic 0.12 / prost 0.13 — workspace-aligned with
# services/egress_proxy and services/sidecar so the shared
# spendguard-provider-routing crate (and any future direct sidecar adapter
# proto re-exports) Just Works.
#
# SLICE 6 turns on the `tls` feature so tonic's ClientTlsConfig is
# available for the mTLS-TCP sidecar dial; the existing `transport`
# feature is preserved for the UDS dev path.
tonic = { version = "0.12", features = ["transport", "tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"

# Async runtime.
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Sidecar transport. hyper-util is the bridge for the (dev) UDS
# service_fn connector and for the SLICE 6 readyz HTTP probe. hyper +
# http-body-util power the tiny /readyz + /livez listener.
hyper-util = { version = "0.1", features = ["tokio"] }
hyper = { version = "1", features = ["http1", "server"] }
http-body-util = "0.1"
tower = "0.5"

# SLICE 6 — rustls + tokio-rustls give us a custom `ServerCertVerifier`
# so we can pin the SPIFFE URI SAN against the configured tenant id
# (mirrors `services/output_predictor/src/plugin_client.rs` cert
# pinning shape from HARDEN_08).
rustls = "0.23"
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs"] }
rustls-pemfile = "2"
x509-parser = "0.16"
sha2 = "0.10"
hex = "0.4"

# COV_01 — provider routing table shared with services/egress_proxy.
# SLICE 1 doesn't call route() yet (handshake-only), but main() still
# registers a default no-op extractor set so a future slice can flip on
# request-body parsing without re-init.
spendguard-provider-routing = { path = "../../crates/spendguard-provider-routing" }
spendguard-tokenizer = { path = "../../crates/spendguard-tokenizer" }

# Observability.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Errors.
thiserror = "1"
anyhow = "1"

# JSON for body parsing (chat/completions, messages) — wired in SLICE 2.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"

# UUIDs for session_id derivation + request id correlation.
uuid = { version = "1", features = ["v7", "v4"] }

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
# Smoke-test deps. tonic transport + tokio's TcpListener::bind("127.0.0.1:0")
# pattern is enough for SLICE 1.
pretty_assertions = "1"
# SLICE 5 — YAML parse for the Envoy AI Gateway v0.6 vendored reference
# manifests under tests/fixtures/v0_6/. Parsed in tests only (no runtime
# dep) so the conformance harness can pin against the upstream contract
# without dragging serde_yaml into the production binary.
serde_yaml = "0.9"
