[package]
name = "spendguard-leases"
version = "0.1.0-alpha"
edition = "2021"
license = "Apache-2.0"
description = "Phase 5 GA hardening S1: shared lease primitive (Postgres + k8s Lease) for singleton background workers."

[lib]
name = "spendguard_leases"
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Followup #5: real K8sLease via coordination.k8s.io/Lease.
kube = { version = "0.95", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.23", features = ["latest"] }

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
