[package]
name = "spendguard-ledger"
version = "0.1.0-alpha"
edition = "2021"
license = "Apache-2.0"
description = "SpendGuard Ledger service: append-only double-entry ledger + audit transactional outbox"

[[bin]]
name = "spendguard-ledger"
path = "src/main.rs"

[dependencies]
# gRPC + protobuf
tonic = { version = "0.12", features = ["tls", "transport", "gzip"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# Postgres
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "bigdecimal",
    "json",
] }

# Crypto / encoding
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUIDs (v7 monotonic)
uuid = { version = "1", features = ["v7", "v4", "serde"] }

# Big decimal for NUMERIC(38,0)
bigdecimal = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Errors / logging
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config (env-driven for POC; richer config later)
envy = "0.4"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
pretty_assertions = "1"
