[package]
name = "spendguard-outbox-forwarder"
version = "0.1.0-alpha"
edition = "2021"
license = "Apache-2.0"
description = "SpendGuard Outbox Forwarder: polls audit_outbox.pending_forward + pushes via canonical_ingest.AppendEvents (closes Phase 2B audit chain loop per Stage 2 §11.3)."

[[bin]]
name = "spendguard-outbox-forwarder"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["tls", "transport", "gzip"] }
prost = "0.13"
prost-types = "0.13"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
envy = "0.4"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"
